--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "align-string",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "align-string",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "mocha test/**/*.spec.js"
   },
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/gavinning/align-string/issues"
   },
-  "homepage": "https://github.com/gavinning/align-string#readme"
+  "homepage": "https://github.com/gavinning/align-string#readme",
+  "dependencies": {
+    "pad-right": "^0.2.2"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
